// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot tests for Cart Should render correctly first load 1`] = `
Array [
  <section
    className="cart-addition container"
  >
    <h2
      className="cart-addition__title"
    >
      Добавить товар
    </h2>
    <form
      action="#"
      className="cart-addition__form"
      onSubmit={[Function]}
    >
      <select
        aria-label="Выбрать товар из списка"
        className="cart-addition__select"
      >
        <option
          value="1"
        >
          Видеокарта GIGABYTE GeForce GTX 1050 Ti OC 4G
        </option>
        <option
          value="2"
        >
          Видеокарта GIGABYTE GV-N2060WF2OC-6GD V2
        </option>
        <option
          value="3"
        >
          Видеокарта GIGABYTE GeForce RTX 2080 WINDFORCE OC 8G
        </option>
        <option
          value="4"
        >
          Видеокарта Palit GeForce GT 710 2GB DDR3 Silent
        </option>
        <option
          value="5"
        >
          Видеокарта GIGABYTE GeForce GTX 1080 TI WaterforceWB Xtreme Edition 1
        </option>
      </select>
      <div
        className="cart-count cart-addition__count-wrapper"
      >
        <button
          className="cart-count__button"
          onClick={[Function]}
          type="button"
        >
          -
        </button>
        <input
          aria-label="Количество"
          className="cart-count__value"
          min="1"
          onChange={[Function]}
          type="number"
          value={1}
        />
        <button
          className="cart-count__button"
          onClick={[Function]}
          type="button"
        >
          +
        </button>
      </div>
      <button
        className="cart-addition__add cart-button cart-button--attention"
        type="submit"
      >
        Добавить
      </button>
    </form>
  </section>,
  <section
    className="cart container"
  >
    <h2
      className="visually-hidden"
    >
      Товары в корзине
    </h2>
    <form
      className="cart__form"
      onSubmit={[Function]}
    >
      <ul
        className="cart__list"
      />
      <div
        className="cart__total"
      >
        <div
          className="cart__row cart__total-row cart-row"
        >
          <p
            className="cart__total-count"
          >
            В корзине 
            0
             
            товаров
          </p>
          <p
            className="cart__total-price"
          >
            0
             ₽
          </p>
        </div>
        <button
          className="cart__submit cart-button cart-button--attention"
          disabled={true}
          type="submit"
        >
          Продолжить оформление
        </button>
      </div>
    </form>
  </section>,
]
`;

exports[`Snapshot tests for Cart Should render correctly with selected goods 1`] = `
Array [
  <section
    className="cart-addition container"
  >
    <h2
      className="cart-addition__title"
    >
      Добавить товар
    </h2>
    <form
      action="#"
      className="cart-addition__form"
      onSubmit={[Function]}
    >
      <select
        aria-label="Выбрать товар из списка"
        className="cart-addition__select"
      >
        <option
          value="1"
        >
          Видеокарта GIGABYTE GeForce GTX 1050 Ti OC 4G
        </option>
        <option
          value="2"
        >
          Видеокарта GIGABYTE GV-N2060WF2OC-6GD V2
        </option>
        <option
          value="3"
        >
          Видеокарта GIGABYTE GeForce RTX 2080 WINDFORCE OC 8G
        </option>
        <option
          value="4"
        >
          Видеокарта Palit GeForce GT 710 2GB DDR3 Silent
        </option>
        <option
          value="5"
        >
          Видеокарта GIGABYTE GeForce GTX 1080 TI WaterforceWB Xtreme Edition 1
        </option>
      </select>
      <div
        className="cart-count cart-addition__count-wrapper"
      >
        <button
          className="cart-count__button"
          onClick={[Function]}
          type="button"
        >
          -
        </button>
        <input
          aria-label="Количество"
          className="cart-count__value"
          min="1"
          onChange={[Function]}
          type="number"
          value={1}
        />
        <button
          className="cart-count__button"
          onClick={[Function]}
          type="button"
        >
          +
        </button>
      </div>
      <button
        className="cart-addition__add cart-button cart-button--attention"
        type="submit"
      >
        Добавить
      </button>
    </form>
  </section>,
  <section
    className="cart container"
  >
    <h2
      className="visually-hidden"
    >
      Товары в корзине
    </h2>
    <form
      className="cart__form"
      onSubmit={[Function]}
    >
      <ul
        className="cart__list"
      >
        <li
          className="cart__item"
        >
          <img
            alt="Видеокарта GIGABYTE GeForce GTX 1050 Ti OC 4G"
            className="cart__picture"
            height="100"
            src="https://img.mvideo.ru/Pdb/30031080m.jpg"
            width="100"
          />
          <div
            className="cart__info"
          >
            <div
              className="cart__row cart-row"
            >
              <h3
                className="cart__title"
              >
                <a
                  className="cart__link"
                  href="#"
                >
                  Видеокарта GIGABYTE GeForce GTX 1050 Ti OC 4G
                </a>
              </h3>
              <div
                className="cart__price-wrapper"
              >
                <p
                  className="cart__price-total"
                >
                  25,380
                   ₽
                </p>
                <p
                  className="cart__price"
                >
                  2
                   x 
                  12,690
                   ₽
                </p>
              </div>
            </div>
            <div
              className="cart__row cart-row"
            >
              <button
                className="cart__delete cart-button  cart-button--in-text"
                onClick={[Function]}
                type="button"
              >
                Удалить
              </button>
              <div
                className="cart-count cart__count-wrapper cart-row"
              >
                <button
                  className="cart-count__button"
                  onClick={[Function]}
                  type="button"
                >
                  -
                </button>
                <input
                  aria-label="Количество"
                  className="cart-count__value"
                  min="1"
                  onChange={[Function]}
                  type="number"
                  value={2}
                />
                <button
                  className="cart-count__button"
                  onClick={[Function]}
                  type="button"
                >
                  +
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="cart__item"
        >
          <img
            alt="Видеокарта GIGABYTE GV-N2060WF2OC-6GD V2"
            className="cart__picture"
            height="100"
            src="https://img.mvideo.ru/Pdb/30052540m.jpg"
            width="100"
          />
          <div
            className="cart__info"
          >
            <div
              className="cart__row cart-row"
            >
              <h3
                className="cart__title"
              >
                <a
                  className="cart__link"
                  href="#"
                >
                  Видеокарта GIGABYTE GV-N2060WF2OC-6GD V2
                </a>
              </h3>
              <div
                className="cart__price-wrapper"
              >
                <p
                  className="cart__price-total"
                >
                  29,490
                   ₽
                </p>
              </div>
            </div>
            <div
              className="cart__row cart-row"
            >
              <button
                className="cart__delete cart-button  cart-button--in-text"
                onClick={[Function]}
                type="button"
              >
                Удалить
              </button>
              <div
                className="cart-count cart__count-wrapper cart-row"
              >
                <button
                  className="cart-count__button"
                  onClick={[Function]}
                  type="button"
                >
                  -
                </button>
                <input
                  aria-label="Количество"
                  className="cart-count__value"
                  min="1"
                  onChange={[Function]}
                  type="number"
                  value={1}
                />
                <button
                  className="cart-count__button"
                  onClick={[Function]}
                  type="button"
                >
                  +
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="cart__item"
        >
          <img
            alt="Видеокарта GIGABYTE GeForce RTX 2080 WINDFORCE OC 8G"
            className="cart__picture"
            height="100"
            src="https://img.mvideo.ru/Pdb/30040867m.jpg"
            width="100"
          />
          <div
            className="cart__info"
          >
            <div
              className="cart__row cart-row"
            >
              <h3
                className="cart__title"
              >
                <a
                  className="cart__link"
                  href="#"
                >
                  Видеокарта GIGABYTE GeForce RTX 2080 WINDFORCE OC 8G
                </a>
              </h3>
              <div
                className="cart__price-wrapper"
              >
                <p
                  className="cart__price-total"
                >
                  150,000
                   ₽
                </p>
                <p
                  className="cart__price"
                >
                  3
                   x 
                  50,000
                   ₽
                </p>
              </div>
            </div>
            <div
              className="cart__row cart-row"
            >
              <button
                className="cart__delete cart-button  cart-button--in-text"
                onClick={[Function]}
                type="button"
              >
                Удалить
              </button>
              <div
                className="cart-count cart__count-wrapper cart-row"
              >
                <button
                  className="cart-count__button"
                  onClick={[Function]}
                  type="button"
                >
                  -
                </button>
                <input
                  aria-label="Количество"
                  className="cart-count__value"
                  min="1"
                  onChange={[Function]}
                  type="number"
                  value={3}
                />
                <button
                  className="cart-count__button"
                  onClick={[Function]}
                  type="button"
                >
                  +
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="cart__item"
        >
          <img
            alt="Видеокарта Palit GeForce GT 710 2GB DDR3 Silent"
            className="cart__picture"
            height="100"
            src="https://img.mvideo.ru/Pdb/30030965m.jpg"
            width="100"
          />
          <div
            className="cart__info"
          >
            <div
              className="cart__row cart-row"
            >
              <h3
                className="cart__title"
              >
                <a
                  className="cart__link"
                  href="#"
                >
                  Видеокарта Palit GeForce GT 710 2GB DDR3 Silent
                </a>
              </h3>
              <div
                className="cart__price-wrapper"
              >
                <p
                  className="cart__price-total"
                >
                  10,000
                   ₽
                </p>
              </div>
            </div>
            <div
              className="cart__row cart-row"
            >
              <button
                className="cart__delete cart-button  cart-button--in-text"
                onClick={[Function]}
                type="button"
              >
                Удалить
              </button>
              <div
                className="cart-count cart__count-wrapper cart-row"
              >
                <button
                  className="cart-count__button"
                  onClick={[Function]}
                  type="button"
                >
                  -
                </button>
                <input
                  aria-label="Количество"
                  className="cart-count__value"
                  min="1"
                  onChange={[Function]}
                  type="number"
                  value={1}
                />
                <button
                  className="cart-count__button"
                  onClick={[Function]}
                  type="button"
                >
                  +
                </button>
              </div>
            </div>
          </div>
        </li>
        <li
          className="cart__item"
        >
          <img
            alt="Видеокарта GIGABYTE GeForce GTX 1080 TI WaterforceWB Xtreme Edition 1"
            className="cart__picture"
            height="100"
            src="https://img.mvideo.ru/Pdb/30031081m.jpg"
            width="100"
          />
          <div
            className="cart__info"
          >
            <div
              className="cart__row cart-row"
            >
              <h3
                className="cart__title"
              >
                <a
                  className="cart__link"
                  href="#"
                >
                  Видеокарта GIGABYTE GeForce GTX 1080 TI WaterforceWB Xtreme Edition 1
                </a>
              </h3>
              <div
                className="cart__price-wrapper"
              >
                <p
                  className="cart__price-total"
                >
                  25,000
                   ₽
                </p>
              </div>
            </div>
            <div
              className="cart__row cart-row"
            >
              <button
                className="cart__delete cart-button  cart-button--in-text"
                onClick={[Function]}
                type="button"
              >
                Удалить
              </button>
              <div
                className="cart-count cart__count-wrapper cart-row"
              >
                <button
                  className="cart-count__button"
                  onClick={[Function]}
                  type="button"
                >
                  -
                </button>
                <input
                  aria-label="Количество"
                  className="cart-count__value"
                  min="1"
                  onChange={[Function]}
                  type="number"
                  value={1}
                />
                <button
                  className="cart-count__button"
                  onClick={[Function]}
                  type="button"
                >
                  +
                </button>
              </div>
            </div>
          </div>
        </li>
      </ul>
      <div
        className="cart__total"
      >
        <div
          className="cart__row cart__total-row cart-row"
        >
          <p
            className="cart__total-count"
          >
            В корзине 
            5
             
            товаров
          </p>
          <p
            className="cart__total-price"
          >
            1,350
             ₽
          </p>
        </div>
        <button
          className="cart__submit cart-button cart-button--attention"
          disabled={false}
          type="submit"
        >
          Продолжить оформление
        </button>
      </div>
    </form>
  </section>,
]
`;
